fixes and stremlined application

--- a/Views/Home/Upload.cshtml
+++ b/Views/Home/Upload.cshtml
@@ -34,7 +34,7 @@
         </div>
 
         <div class="col-lg-3">
-            <b> <label asp-for="Image.FileName">Namne uppladdning</label></b>
+            <b> <label asp-for="Image.FileName">Namnge uppladdning</label></b>
             <input class="form-control" asp-for="Image.FileName" />
         </div>
         @*<div class="col-lg-3">
