--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
                     @foreach (var v in Model.Image)
                     {
                         <div class="col-md-4 ftco-animate">
-                            <a href="@v.ImageUrl" class="photography-entry img image-popup d-flex justify-content-center align-items-center" style="background-image: url(@v.ImageUrl">
+                            <a href="/UserUploadedImages/@v.ImageUrl" class="photography-entry img image-popup d-flex justify-content-center align-items-center" style="background-image: url(/UserUploadedImages/@v.ImageUrl">
                                 <div class="overlay"></div>
                                 <div class="text text-center">
                                     <h3>@v.FileName</h3>
