--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using Pixgram_V1
 @using Pixgram_V1.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Pixgram_V1.ViewModels
+@using Pixgram_V1.Infrastructure
+@addTagHelper Pixgram_V1.Infrastructure.*, Pixgram_V1
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
