--- a/Views/Home/Upload.cshtml
+++ b/Views/Home/Upload.cshtml
@@ -28,7 +28,7 @@
 
                 <h4>No category that fits your upload? Create your own category below.</h4>
 
-                <input type="text" asp-for="CategoryName" placeholder="Your categoryname..." />
+                <input type="text" asp-for="CategoryName" placeholder="Your categoryname..." required/>
 
                 <button type="submit" class="btn btn-danger">Create category</button>
 
