Images shows in cart - stable

--- a/Views/Shared/Components/CartWidget/Default.cshtml
+++ b/Views/Shared/Components/CartWidget/Default.cshtml
@@ -13,7 +13,7 @@
                     <li>
                         <div class="item">
                             <span class="item-left">
-                                <img src="http://via.placeholder.com/50x50" alt="@row.FileUpload.FileTitle">
+                                <img src="@row.FileUpload.FilePath" width="60" height="60" style="margin: 5px;" alt="@row.FileUpload.FileTitle">
                                 <span class="item-info">
                                     <span>
                                         @row.FileUpload.FileTitle
