--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -8,6 +8,7 @@
     <thead>
         <tr>
             <th>Antal</th>
+            <th>Images</th>
             <th>Produkt</th>
             <th>Alternativ</th>
         </tr>
@@ -18,6 +19,9 @@
         {
             <tr>
                 <td class="text-center">@r.Quantity</td>
+                <td>
+                    <img src="@r.FileUpload.FilePath" width="120" height="120" style="margin: 5px;" alt="@r.FileUpload.FileTitle">
+                </td>
                 <td class="text-center">@r.FileUpload.FileTitle</td>
 
                 <td>
