--- a/Views/Shared/Components/CartWidget/Default.cshtml
+++ b/Views/Shared/Components/CartWidget/Default.cshtml
@@ -5,7 +5,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                role="button" aria-expanded="false">
                 <span class="glyphicon glyphicon-shopping-cart"></span>
-               Cart @Model.CartRows.Count()<span class="caret"></span>
+               Favourites @Model.CartRows.Count()<span class="caret"></span>
             </a>
             <ul class="dropdown-menu dropdown-cart" role="menu">
                 @foreach (var row in Model.CartRows)
@@ -26,14 +26,14 @@
                                       method="post">
                                     <input type="hidden" name="Id" value="@row.FileUpload.Id" />
                                     <input type="hidden" name="returnUrl" value="@ViewContext.HttpContext.Request.PathAndQueryString()" />
-                                    <button type="submit" class="btn btn-xs btn-danger pull-right">Ta bort</button>
+                                    <button type="submit" class="btn btn-xs btn-danger pull-right">Remove</button>
                                 </form>
                             </div>
                         </div>
                     </li>
                 }
                 <li class="divider"></li>
-                <li><a asp-controller="Cart" asp-action="Index">Till Varukorgen</a></li>
+                <li><a asp-controller="Cart" asp-action="Index">Show Favourites</a></li>
             </ul>
         </li>
     </ul>
