--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-lg-6">
-                                <form method="post" asp-controller="Home" asp-route-CategoryName="@Model.CategoryName" asp-action="Index">
+                                <form method="post" asp-controller="Home" asp-action="Index">
                                     <select asp-items="Model.Categories" asp-for="CategoryId"></select>
                                     <button type="submit" class="btn btn-danger">Choose Category</button>
                                 </form> 
