--- a/Views/Home/Upload.cshtml
+++ b/Views/Home/Upload.cshtml
@@ -3,9 +3,27 @@
     ViewData["Title"] = "Upload";
 }
 
-<div class="text-center">
+    <br />
+    <br />
+<div class="text-center" style="margin-left:150px;">
     <h1 class="display-4">Upload</h1>
 </div>
+
+<br />
+
+<div class="text-center" style="margin-left:150px;">
+    <h1 class="display-4" >
+
+        @if (TempData["FileNotAccepted"] != null)
+        {
+        <p class="alert alert-primary text-center">@TempData["FileNotAccepted"]</p>
+        }
+
+
+
+    </h1>
+</div>
+
 
 
 
@@ -28,7 +46,7 @@
 
                 <h4>No category that fits your upload? Create your own category below.</h4>
 
-                <input type="text" asp-for="CategoryName" placeholder="Your categoryname..." required/>
+                <input type="text" asp-for="CategoryName" placeholder="Your categoryname..." required />
 
                 <button type="submit" class="btn btn-danger">Create category</button>
 
@@ -37,10 +55,10 @@
     </div>
 </div>
 
-   
-           
-        
-        
-           
-    
+
+
+
+
+
+
 
